# COMP371-Project

./: CMakeLists.txt  README.md
assets/: Balloon.fragmentshader.glsl  Balloon.vertexshader.glsl  Metal.fragmentshader.glsl  Phong.fragmentshader.glsl  Phong.vertexshader.glsl  Toon.fragmentshader.glsl
report/: Report.docx
src/: RUIObject.h  RenderModel.cpp  RenderModel.h  TOGLApp.cpp  TOGLApp.h  TOGLWindow.cpp  TOGLWindow.h  TOGWLayer.h  TTrackBall.cpp  Virtual3DLayer.cpp  Virtual3DLayer.h  camera.h  main.cpp  tutorial18.cpp
web/: index.html
web/css/: style.css
